BLAME: Zebulon Mcknight. adding my name to my code chunks

--- a/model_nn.ipynb
+++ b/model_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea83d82a",
    "metadata": {},
    "outputs": [],
@@ -42,6 +42,8 @@
    "source": [
     "# Custom Dataset class modeled after Pytorch dataset. Created to avoid 'class-per-folder' \n",
     "# organization that is required by standard pytorch datasets.\n",
+    "\n",
+    "# BLAME: Zebulon Mcknight *** \n",
     "\n",
     "class DogBreedDataset(Dataset):\n",
     "    # __init__ receives a pandas dataframe of form ('id')('breed'), a directory\n",
@@ -96,6 +98,8 @@
    "outputs": [],
    "source": [
     "# Data Transformers \n",
+    "\n",
+    "# BLAME: Zebulon Mcknight ***\n",
     "\n",
     "train_transforms = transforms.Compose([\n",
     "    transforms.Resize((224,224)), # pytorch expects 224x224 sized images\n",
@@ -345,6 +349,8 @@
    "source": [
     "# DEFINING MODEL SPECIFICATIONS\n",
     "\n",
+    "# BLAME: Zebulon Mcknight ***\n",
+    "\n",
     "device  = \"cpu\" # no gpu, so training on cpu \n",
     "\n",
     "# This line represents our model. For this implementation we are \n",
@@ -396,6 +402,8 @@
    "source": [
     "# TRAINING LOOP \n",
     "\n",
+    "# BLAME: Zebulon Mcknight ***\n",
+    "\n",
     "# Our training function takes in a reference to our model, our training and validation\n",
     "# loaders, a loss function, an optimizer, and a number of epochs to train for \n",
     "def train(model, train_loader, val_loader, criterion, optimizer, num_epochs): \n",
@@ -444,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a4c5b9a3",
    "metadata": {},
    "outputs": [
@@ -525,7 +533,7 @@
     }
    ],
    "source": [
-    "train(cnn, train_loader, val_loader, criterion, optimizer, num_epochs=5)\n"
+    "train(cnn, train_loader, val_loader, criterion, optimizer, num_epochs=5)"
    ]
   },
   {
