--- a/scratch/preprocessing.ipynb
+++ b/scratch/preprocessing.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "739401f5",
    "metadata": {},
    "outputs": [
@@ -53,6 +53,8 @@
     }
    ],
    "source": [
+    "# BLAME: Zebulon Mcknight *** \n",
+    "\n",
     "# Image Preprocessing \n",
     "samples = []\n",
     "targets = []\n",
