--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -50,6 +50,8 @@
     }
    ],
    "source": [
+    "# BLAME: Zebulon Mcknight *** \n",
+    "\n",
     "# Loading labels \n",
     "labels = pd.read_csv(\"data/labels.csv\")\n",
     "\n",
