BLAME: Kyle Bomar *** Adding name to code chunks

--- a/model_nn.ipynb
+++ b/model_nn.ipynb
@@ -176,7 +176,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load split data into independent training and validation datasets \n",
+    "# Load split data into independent training and validation datasets\n",
+    "# BLAME: Kyle Bomar ***\n",
+    " \n",
     "train_dataset = DogBreedDataset(\n",
     "    label_df=train_df,\n",
     "    img_dir ='data/train',\n",
@@ -200,6 +202,8 @@
    "outputs": [],
    "source": [
     "# Define our dataloaders for training and validation\n",
+    "# BLAME: Kyle Bomar ***\n",
+    "\n",
     "train_loader = DataLoader(\n",
     "    # these variable primarily affect efficiency at fetching data\n",
     "    train_dataset,\n",
@@ -432,7 +436,9 @@
     "        epoch_acc = running_corrects / len(train_loader.dataset)\n",
     "        print(f\"Epoch {epoch+1}/{num_epochs} | Train Loss: {epoch_loss} | Accuracy: {epoch_acc}\")\n",
     "\n",
-    "        # Validation loop \n",
+    "        # Validation loop\n",
+    "        # BLAME: Kyle Bomar ***\n",
+    "         \n",
     "        model.eval()\n",
     "        val_loss = 0.0\n",
     "        val_corrects = 0\n",
