--- a/scratch/preprocessing.ipynb
+++ b/scratch/preprocessing.ipynb
@@ -95,7 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Standard PCA to reduce computational cost \n",
+    "# Standard PCA to reduce computational cost\n",
+    "\n",
+    "# BLAME: Kyle Bomar *** \n",
     "\n",
     "pca = PCA(n_components=500, svd_solver='randomized', random_state=42)\n",
     "samples_pca = pca.fit_transform(scaled_samples)"
