--- a/scratch/preprocessing.ipynb
+++ b/scratch/preprocessing.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "# Label Encoding \n",
+    "# BLAME: Minh Cao *** \n",
     "\n",
     "labels = pd.read_csv(\"data/labels.csv\")\n",
     "breeds = labels['breed'].unique() \n",
@@ -83,6 +84,7 @@
    "outputs": [],
    "source": [
     "# Scaling, this will make std = 1 and mean approximately = 0, should be nearly 0 \n",
+    "# BLAME: Minh Cao *** \n",
     "\n",
     "scaler = StandardScaler(with_mean=True,with_std=True)\n",
     "scaled_samples = scaler.fit_transform(samples)\n"
