--- a/scratch/test.ipynb
+++ b/scratch/test.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "# BLAME: Zebulon Mcknight *** \n",
+    "# BLAME: Zebulon Mcknight and Minh Cao*** \n",
     "\n",
     "# Loading labels \n",
     "labels = pd.read_csv(\"data/labels.csv\")\n",
