--- a/model_nn.ipynb
+++ b/model_nn.ipynb
@@ -83,6 +83,7 @@
    "outputs": [],
    "source": [
     "# Reading in labels for each image \n",
+    "# BLAME: Minh Cao *** \n",
     "labels = pd.read_csv(\"data/labels.csv\")\n",
     "breeds = labels['breed'].unique() \n",
     "\n",
@@ -139,6 +140,7 @@
    "outputs": [],
    "source": [
     "# Load all data into a dataset \n",
+    "# BLAME: Minh Cao *** \n", 
     "dataset = DogBreedDataset(labels, \"data/train\", classes, train_transforms)\n",
     "loader = DataLoader(dataset, batch_size=32, shuffle=True)"
    ]
@@ -355,7 +357,7 @@
    "source": [
     "# DEFINING MODEL SPECIFICATIONS\n",
     "\n",
-    "# BLAME: Zebulon Mcknight ***\n",
+    "# BLAME: Zebulon Mcknight and Minh Cao***\n",
     "\n",
     "device  = \"cpu\" # no gpu, so training on cpu \n",
     "\n",
