--- a/model_nn.ipynb
+++ b/model_nn.ipynb
@@ -25,12 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e8aa53b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.set_num_threads(os.cpu_count())"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "print(device)\n",
+    "\n",
+    "torch.manual_seed(45)\n",
+    "np.random.seed(45)"
    ]
   },
   {
@@ -280,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "eaec52dc",
    "metadata": {},
    "outputs": [
@@ -384,8 +389,6 @@
     "# DEFINING MODEL SPECIFICATIONS\n",
     "\n",
     "# BLAME: Zebulon Mcknight and Minh Cao***\n",
-    "\n",
-    "device  = \"cpu\" # no gpu, so training on cpu \n",
     "\n",
     "# This line represents our model. For this implementation we are \n",
     "# using resnet18 with weights pretrained on ImageNetV1. This is an\n",
